[FIX] sap.m.Label: Asterisk is displayed properly
When sap.m.Label was used in a form and was truncated required asterisk was not displayed in zh-CN language

BCP: 2270016372
(cherry picked from commit 5152a8f79906a07a380d7fec190ff37af4472477)
CR-Id: 002075125900000038732024

--- a/src/sap.m/src/sap/m/themes/base/Label.less
+++ b/src/sap.m/src/sap/m/themes/base/Label.less
@@ -176,6 +176,9 @@ td.sapUiFormElementLbl:not(.sapUiGridLabelFull) > .sapMLabel{
 			&:lang(zh-TW) {
 				padding-right: 1.59em;
 			}
+			&:lang(zh-CN) {
+				padding-right: 1.59em;
+			}
 
 			.sapMLabelColonAndRequired {
 				position: absolute;
